Website: Make geometry notes more consistent + add spirit.
[SVN r76700]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -89,42 +89,130 @@
           <ul>
             <li>
               <div>
-                Fixed bugs bugfix: distance for multi-geometries ignored specified
-                distance strategy. Fixed bugfix in difference for polygon/multi_polygon
-                (reported 2011/10/24 on GGL-list) bugfix: raise exception for calculation
-                of distances of multi-geometrie(s) where one of them is empty bugfix:
-                multi DSV did not correctly use settings, fixed bugfix: self-intersections
-                could sometimes be missed (introduced in 1.48), fixed bugfix: convex
-                hull crashed on empty range (e.g. empty multi point), fixed
+                Fixed bugs
+                <ul>
+                  <li>
+                    <div>
+                      Distance for multi-geometries ignored specified distance strategy.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      In difference for polygon/multi_polygon (reported 2011/10/24
+                      on GGL-list).
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Raise exception for calculation of distances of multi-geometrie(s)
+                      where one of them is empty
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Multi DSV did not correctly use settings.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Self-intersections could sometimes be missed (introduced in
+                      1.48).
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Convex hull crashed on empty range (e.g. empty multi point).
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
               <div>
-                Solved tickets <a href="https://svn.boost.org/trac/boost/ticket/6028">6028</a>
-                Documentation: closure, fixed. <a href="https://svn.boost.org/trac/boost/ticket/6178">6178</a>
-                Missing headerfile, fixed. <a href="https://svn.boost.org/trac/boost/ticket/6021">6021</a>
-                convex hull of multipoint, fixed.
+                Solved tickets
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/6028">#6028</a>
+                      Documentation: closure.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/6178">#6178</a>
+                      Missing headerfile.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/6021">#6021</a>
+                      convex hull of multipoint.
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
               <div>
-                Additional functionality support for line/polygon intersections and
-                differences support for convert of segment/box of different point
-                types support for append for multi point scalar functions (distance,
-                area, length, perimeter) now throw an empty_input_exception on empty
-                input
+                Additional functionality
+                <ul>
+                  <li>
+                    <div>
+                      Support for line/polygon intersections and differences
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Support for convert of segment/box of different point types
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Support for append for multi point
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Scalar functions (distance, area, length, perimeter) now throw
+                      an empty_input_exception on empty input
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
               <div>
-                Documentation updated support status
+                Documentation
+                <ul>
+                  <li>
+                    <div>
+                      Updated support status
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
               <div>
-                Internal changes updates in specializations/not_implemented for distance/convert/assign/area
-                move of wkt/dsv to io folder, making domains redundant strategy concepts
-                assigned to zero to avoid clang warnings (patched by Vishnu)
+                Internal changes
+                <ul>
+                  <li>
+                    <div>
+                      Updates in specializations/not_implemented for distance/convert/assign/area
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Move of wkt/dsv to io folder, making domains redundant
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Strategy concepts assigned to zero to avoid clang warnings
+                      (patched by Vishnu)
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -296,6 +384,19 @@
                 <a href="https://svn.boost.org/trac/boost/ticket/5757">#5757</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/5710">#5710</a>,
                 and <a href="https://svn.boost.org/trac/boost/ticket/5307">#5307</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/spirit/index.html">Spirit</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Spirit V2.5.2, see the '<a href="/doc/libs/1_49_0/libs/spirit/doc/html/spirit/what_s_new/spirit_2_5_2.html">What's
+                New</a>' section for details.
               </div>
             </li>
           </ul>
