Website: Unordered release notes.
[SVN r76701]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -404,6 +404,33 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/unordered">Unordered</a>:</span>
+          <ul>
+            <li>
+              <div>
+                On compilers without rvalue references, the containers are no longer
+                movable by default, as move emulation was causing some odd quirks.
+                Define <code><span class="identifier">BOOST_UNORDERED_USE_MOVE</span></code>
+                to make them movable (<a href="https://svn.boost.org/trac/boost/tickets/6167">#6167</a>,
+                <a href="https://svn.boost.org/trac/boost/tickets/6311">#6311</a>)
+                - Boost.Move is still used for elements regardless.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fix sequence point warning (<a href="https://svn.boost.org/trac/boost/tickets/6370">#6370</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Better support for C++11 compilers using older standard libraries.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/uuid/">Uuid</a>:</span>
           <ul>
             <li>
