Website: Thread release notes.
[SVN r76738]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -394,6 +394,181 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/thread">Thread</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed Bugs:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/2309">#2309</a>
+                      Lack of g++ symbol visibility support in Boost.Thread.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/2639">#2639</a>
+                      documentation should be extended(defer_lock, try_to_lock, ...).
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/3639">#3639</a>
+                      Boost.Thread doesn't build with Sun-5.9 on Linux.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/3762">#3762</a>
+                      Thread can't be compiled with winscw (Codewarrior by Nokia).
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/3885">#3885</a>
+                      document about mix usage of boost.thread and native thread
+                      api.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/3975">#3975</a>
+                      Incorrect precondition for promise::set_wait_callback().
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/4048">#4048</a>
+                      thread::id formatting involves locale
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/4315">#4315</a>
+                      gcc 4.4 Warning: inline ... declared as dllimport: attribute
+                      ignored.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/4480">#4480</a>
+                      OpenVMS patches for compiler issues workarounds.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/4819">#4819</a>
+                      boost.thread's documentation misprints.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5040">#5040</a>
+                      future.hpp in boost::thread does not compile with /clr.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5423">#5423</a>
+                      thread issues with C++0x.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5502">#5502</a>
+                      race condition between shared_mutex timed_lock and lock_shared.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5594">#5594</a>
+                      boost::shared_mutex not fully compatible with Windows CE.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5617">#5617</a>
+                      boost::thread::id copy ctor.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5739">#5739</a>
+                      set-but-not-used warnings with gcc-4.6.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5826">#5826</a>
+                      threads.cpp: resource leak on threads creation failure.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5839">#5839</a>
+                      thread.cpp: ThreadProxy leaks on exceptions.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/5859">#5859</a>
+                      win32 shared_mutex constructor leaks on exceptions.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6100">#6100</a>
+                      Compute hardware_concurrency() using get_nprocs() on GLIBC
+                      systems.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6141">#6141</a>
+                      Compilation error when boost.thread and boost.move are used
+                      together.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6168">#6168</a>
+                      recursive_mutex is using wrong config symbol (possible typo).
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6175">#6175</a>
+                      Compile error with SunStudio.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6200">#6200</a>
+                      patch to have condition_variable and mutex error better handle
+                      EINTR.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6207">#6207</a>
+                      shared_lock swap compiler error on clang 3.0 c++11.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6208">#6208</a>
+                      try_lock_wrapper swap compiler error on clang 3.0 c++11.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/unordered">Unordered</a>:</span>
           <ul>
             <li>
