--- a/users/download/index.html
+++ b/users/download/index.html
@@ -28,6 +28,7 @@
             <div class="section-body">
               <ul class="toc">
 <li><a href="#live">Current Release</li>
+<li><a href="#beta">Beta Release</li>
 
                 <li><a href="#history">Old Boost Releases</a></li>
 
@@ -54,6 +55,24 @@
                 <a href="http://sourceforge.net/projects/boost/files/boost/1.48.0/">Download</a></li>
                 <li>
                 <a href="/doc/libs/1_48_0/">Documentation</a></li>
+              </ul><h2 id="beta">Beta Release</h2>
+              <h3><span class=
+              "news-title">Version 1.49.0</span></h3>
+
+              <p class="news-date">In Progress</p>
+
+              <p class="news-description">
+              <span class="brief"><span class="purpose">
+      Updated Libraries: Container, Geometry, Graph, Icl, Interprocess, Intrusive,
+      Lexical Cast, Locale, Move, Property Tree, Spirit, Thread, Unordered, Uuid.
+    </span></span></p>
+
+              <ul class="menu">
+                <li>
+                <a href="/users/history/version_1_49_0.html">Details</a></li>
+
+                <li>
+                <a href="http://sourceforge.net/projects/boost/files/boost/1.49.0.beta.1/">Download</a></li>
               </ul>
 
               <h2><a name="history" id="history"></a>Old Boost Releases</h2>
