--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.49.0 - work in progress</title>
+  <title>Version 1.49.0 - beta release</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -32,9 +32,8 @@
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>Version 1.49.0 - work in progress</h1>
+              <h1>Version 1.49.0 - beta release</h1>
             </div>
-<div class="section-note"><p>Note: This version is at an early stage in its release cycle. The information listed below is incomplete and some of the documentation links may not work yet.</p></div>
 
             <div class="section-body">
               <h2><span class=
@@ -43,9 +42,10 @@
               <p><span class=
               "news-date">In Progress</span></p>
 
-              
+              <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.49.0.beta.1/">Download this beta release.</a></span></p>
               <div class="news-description">
                 <div class="description">
+  
   
   
   <div id="version_1_49_0.updated_libraries">
