--- a/users/download/index.html
+++ b/users/download/index.html
@@ -57,7 +57,7 @@
                 <a href="/doc/libs/1_48_0/">Documentation</a></li>
               </ul><h2 id="beta">Beta Release</h2>
               <h3><span class=
-              "news-title">Version 1.49.0 beta 1</span></h3>
+              "news-title">Version 1.49.0</span></h3>
 
               <p class="news-date">In Progress</p>
 
@@ -69,7 +69,7 @@
 
               <ul class="menu">
                 <li>
-                <a href="/users/history/version_1_49_0_beta_1.html">Details</a></li>
+                <a href="/users/history/version_1_49_0.html">Details</a></li>
 
                 <li>
                 <a href="http://sourceforge.net/projects/boost/files/boost/1.49.0.beta.1/">Download</a></li>
