--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.49.0 - beta release</title>
+  <title>Version 1.49.0 beta 1</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -32,12 +32,12 @@
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>Version 1.49.0 - beta release</h1>
+              <h1>Version 1.49.0</h1>
             </div>
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.49.0</span></h2>
+              "news-title">Version 1.49.0 beta 1</span></h2>
 
               <p><span class=
               "news-date">In Progress</span></p>
