Website: Rewrite release notes link for beta docs.
[SVN r76761]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -42,7 +42,7 @@
 
               <p><span class=
               "news-date">In Progress</span></p>
-
+<p><a href="/doc/libs/1_49_0_beta1/">Documentation</a>
               <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.49.0.beta.1/">Download this beta release.</a></span></p>
               <div class="news-description">
                 <div class="description">
@@ -54,7 +54,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -76,7 +76,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/geometry/">Geometry</a>:</span>
           <ul>
             <li>
               <div>
@@ -211,7 +211,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/graph/">Graph</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/graph/">Graph</a>:</span>
           <ul>
             <li>
               <div>
@@ -243,7 +243,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/icl/">Icl</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/icl/">Icl</a>:</span>
           <ul>
             <li>
               <div>
@@ -262,7 +262,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -300,7 +300,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -314,7 +314,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -335,7 +335,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/locale/">Locale</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/locale/">Locale</a>:</span>
           <ul>
             <li>
               <div>
@@ -348,7 +348,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -364,7 +364,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/property_tree">PropertyTree</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/property_tree">PropertyTree</a>:</span>
           <ul>
             <li>
               <div>
@@ -382,7 +382,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/spirit/index.html">Spirit</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/spirit/index.html">Spirit</a>:</span>
           <ul>
             <li>
               <div>
@@ -395,7 +395,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/thread">Thread</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/thread">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -570,7 +570,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/unordered">Unordered</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/unordered">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -597,7 +597,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/uuid/">Uuid</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/uuid/">Uuid</a>:</span>
           <ul>
             <li>
               <div>
