--- a/users/download/index.html
+++ b/users/download/index.html
@@ -73,6 +73,8 @@
 
                 <li>
                 <a href="http://sourceforge.net/projects/boost/files/boost/1.49.0.beta.1/">Download</a></li>
+                <li>
+                <a href="/doc/libs/1_49_0_beta1/">Documentation</a></li>
               </ul>
 
               <h2><a name="history" id="history"></a>Old Boost Releases</h2>
