--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.49.0 - beta release</title>
+  <title>Version 1.49.0 beta 1</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -32,16 +32,17 @@
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>Version 1.49.0 - beta release</h1>
+              <h1>Version 1.49.0</h1>
             </div>
+<div class="section-note"><p>Note: This version is at an early stage in its release cycle. The information listed below is incomplete and some of the documentation links may not work yet.</p></div>
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.49.0</span></h2>
+              "news-title">Version 1.49.0 beta 1</span></h2>
 
               <p><span class=
               "news-date">In Progress</span></p>
-
+<p><a href="/doc/libs/1_49_0_beta1/">Documentation</a>
               <p><span class="news-download"><a href="http://sourceforge.net/projects/boost/files/boost/1.49.0.beta.1/">Download this beta release.</a></span></p>
               <div class="news-description">
                 <div class="description">
@@ -53,7 +54,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -75,7 +76,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/geometry/">Geometry</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/geometry/">Geometry</a>:</span>
           <ul>
             <li>
               <div>
@@ -210,7 +211,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/graph/">Graph</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/graph/">Graph</a>:</span>
           <ul>
             <li>
               <div>
@@ -242,7 +243,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/icl/">Icl</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/icl/">Icl</a>:</span>
           <ul>
             <li>
               <div>
@@ -261,7 +262,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -299,7 +300,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -313,7 +314,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/conversion/lexical_cast.htm">Lexical cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -334,7 +335,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/locale/">Locale</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/locale/">Locale</a>:</span>
           <ul>
             <li>
               <div>
@@ -347,7 +348,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -363,7 +364,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/property_tree">PropertyTree</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/property_tree">PropertyTree</a>:</span>
           <ul>
             <li>
               <div>
@@ -381,7 +382,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/spirit/index.html">Spirit</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/spirit/index.html">Spirit</a>:</span>
           <ul>
             <li>
               <div>
@@ -394,7 +395,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/thread">Thread</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/thread">Thread</a>:</span>
           <ul>
             <li>
               <div>
@@ -569,7 +570,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/unordered">Unordered</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/unordered">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -596,7 +597,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/uuid/">Uuid</a>:</span>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/uuid/">Uuid</a>:</span>
           <ul>
             <li>
               <div>
