--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -575,16 +575,16 @@
             <li>
               <div>
                 On compilers without rvalue references, the containers are no longer
-                movable by default, as move emulation was causing some odd quirks.
+                movable by default, as move emulation was causing some odd quirks
+                (<a href="https://svn.boost.org/trac/boost/ticket/6167">#6167</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6311">#6311</a>).
                 Define <code><span class="identifier">BOOST_UNORDERED_USE_MOVE</span></code>
-                to make them movable (<a href="https://svn.boost.org/trac/boost/tickets/6167">#6167</a>,
-                <a href="https://svn.boost.org/trac/boost/tickets/6311">#6311</a>)
-                - Boost.Move is still used for elements regardless.
+                to make them movable - Boost.Move is still used for elements regardless.
               </div>
             </li>
             <li>
               <div>
-                Fix sequence point warning (<a href="https://svn.boost.org/trac/boost/tickets/6370">#6370</a>).
+                Fix sequence point warning (<a href="https://svn.boost.org/trac/boost/ticket/6370">#6370</a>).
               </div>
             </li>
             <li>
