Metaparse added to the review schedule Context has been accepted.
[SVN r76807]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -171,6 +171,21 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <td>Metaparse</td>
+
+                    <td>Abel Sinkovics</td>
+
+                    <td>
+		      <ul>
+		      <li><a href="http://abel.web.elte.hu/metaparse/metaparse.zip">Source</a>
+		      <li><a href="http://abel.web.elte.hu/metaparse/metaparse">Documentation</a></td>		      
+		    </ul>
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
 		</tbody>
               </table>
 
@@ -214,9 +229,14 @@ http://www.boost.org/development/website_updating.html
 
                     <td>January 2, 2012 - January 11, 2012</td>
 
-        	    <td><a href=
+        	    <td>
+		      <del><a href=
 		     "http://lists.boost.org/boost-announce/2012/01/0343.php">
-			Ongoing</a>
+			Pending</a></del><br/>
+
+		      <a href=
+		     "http://lists.boost.org/boost-announce/2012/01/0348.php">
+			Accepted</a>
 		    </td>
                   </tr>
 
@@ -245,7 +265,7 @@ http://www.boost.org/development/website_updating.html
 		    <td>
         	      <del><a href=
 		     "http://lists.boost.org/boost-announce/2011/11/0338.php">
-			Ongoing</a></del><br>
+			Pending</a></del><br>
 <a href=
 		     "http://lists.boost.org/boost-announce/2011/12/0340.php">
 			Accepted</a>
