Website: Add Chrono release notes.
[SVN r76833]

--- a/users/download/index.html
+++ b/users/download/index.html
@@ -63,7 +63,7 @@
 
               <p class="news-description">
               <span class="brief"><span class="purpose">
-      Updated Libraries: Container, Geometry, Graph, Icl, Interprocess, Intrusive,
+      Updated Libraries: Chrono, Container, Geometry, Graph, Icl, Interprocess, Intrusive,
       Lexical Cast, Locale, Move, Property Tree, Spirit, Thread, Unordered, Uuid.
     </span></span></p>
 
