--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -54,6 +54,52 @@
     <ul>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/chrono">Chrono</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Bug Fixes:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6092">#6092</a>
+                      Input from non integral durations makes the compiler fail.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6093">#6093</a>
+                      [1/3]second fails as valid duration input.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6113">#6113</a>
+                      duplicate symbol when BOOST_CHRONO_HEADER_ONLY is defined.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6243">#6243</a>
+                      Sandia-pgi-11.9: more than one instance of overloaded function
+                      &quot;min&quot; matches.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6257">#6257</a>
+                      process_cpu_clock::now() on linux gives time_points 1/1000
+                      times.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/container/">Container</a>:</span>
           <ul>
             <li>
@@ -328,6 +374,12 @@
                 <a href="https://svn.boost.org/trac/boost/ticket/6290">#6290</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/6298">#6298</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/6400">#6400</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Better performance and less memory usage for boost::container::basic_string
+                conversions.
               </div>
             </li>
           </ul>
