Website: Add heap.
[SVN r76841]

--- a/users/download/index.html
+++ b/users/download/index.html
@@ -63,8 +63,9 @@
 
               <p class="news-description">
               <span class="brief"><span class="purpose">
-      Updated Libraries: Chrono, Container, Geometry, Graph, Icl, Interprocess, Intrusive,
-      Lexical Cast, Locale, Move, Property Tree, Spirit, Thread, Unordered, Uuid.
+      New Library: Heap. Updated Libraries: Chrono, Container, Geometry, Graph, Icl,
+      Interprocess, Intrusive, Lexical Cast, Locale, Move, Property Tree, Spirit,
+      Thread, Unordered, Uuid.
     </span></span></p>
 
               <ul class="menu">
