--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -49,6 +49,18 @@
   
   
   
+  <div id="version_1_49_0.new_libraries">
+    <h3><span class="link">New Libraries</span></h3>
+    <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/heap/index.html">Heap</a>:</span>
+  Priority queue data
+          structures, from Tim Blechmann.
+        </div>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_49_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
