Website: Add filesystem to release notes.
[SVN r76869]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -134,6 +134,19 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/filesystem/">Filesystem</a>:</span>
+          <ul>
+            <li>
+              <div>
+                See the <a href="/doc/libs/1_49_0_beta1/libs/filesystem/v3/doc/release_history.html">release
+                history</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/geometry/">Geometry</a>:</span>
           <ul>
             <li>
