Website: Rebuild beta.
[SVN r76875]

--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -58,7 +58,8 @@
           <ul>
             <li>
               <div>
-                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/6336">#6336</a>,
+                Fixed bugs <a href="https://svn.boost.org/trac/boost/ticket/6499">#6499</a>,
+                <a href="https://svn.boost.org/trac/boost/ticket/6336">#6336</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/6335">#6335</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/6287">#6287</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/6205">#6205</a>,
