--- a/users/history/version_1_49_0.html
+++ b/users/history/version_1_49_0.html
@@ -49,9 +49,67 @@
   
   
   
+  <div id="version_1_49_0.new_libraries">
+    <h3><span class="link">New Libraries</span></h3>
+    <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/heap/index.html">Heap</a>:</span>
+  Priority queue data
+          structures, from Tim Blechmann.
+        </div>
+      </li>
+    </ul>
+  </div>
   <div id="version_1_49_0.updated_libraries">
     <h3><span class="link">Updated Libraries</span></h3>
     <ul>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/chrono">Chrono</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Bug Fixes:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6092">#6092</a>
+                      Input from non integral durations makes the compiler fail.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6093">#6093</a>
+                      [1/3]second fails as valid duration input.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6113">#6113</a>
+                      duplicate symbol when BOOST_CHRONO_HEADER_ONLY is defined.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6243">#6243</a>
+                      Sandia-pgi-11.9: more than one instance of overloaded function
+                      &quot;min&quot; matches.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="http://svn.boost.org/trac/boost/ticket/6257">#6257</a>
+                      process_cpu_clock::now() on linux gives time_points 1/1000
+                      times.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
       <li>
         <div>
           <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/container/">Container</a>:</span>
@@ -70,6 +128,19 @@
               <div>
                 Added <code><span class="identifier">allocator_traits</span></code>
                 support for both C++11 and C++03 compilers through an internal <code><span class="identifier">allocator_traits</span></code> clone.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_49_0_beta1/libs/filesystem/">Filesystem</a>:</span>
+          <ul>
+            <li>
+              <div>
+                See the <a href="/doc/libs/1_49_0_beta1/libs/filesystem/v3/doc/release_history.html">release
+                history</a>.
               </div>
             </li>
           </ul>
@@ -329,6 +400,12 @@
                 <a href="https://svn.boost.org/trac/boost/ticket/6290">#6290</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/6298">#6298</a>,
                 <a href="https://svn.boost.org/trac/boost/ticket/6400">#6400</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Better performance and less memory usage for boost::container::basic_string
+                conversions.
               </div>
             </li>
           </ul>
@@ -630,7 +707,92 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Intel: 11.1
+              </div>
+            </li>
+            <li>
+              <div>
+                LLVM Clang 2.8
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 3.4.6, 4.2.4, 4.3.4, 4.4.3, 4.5.2, 4.6.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++0x mode: 4.3.4, 4.4.3, 4.5.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Intel: 11.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.2.1, 4.4.4
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++0x mode: 4.4.4
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                Visual C++ 8.0, 9.0, 10.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, mingw: 4.4.0, 4.4.7, 4.5.4, 4.6.1, 4.7.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                GCC 4.2.1, 32 and 64 bit.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC, C++0x mode: 4.4.2, 4.6.1, 4.6.2
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -640,7 +802,139 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                GCC: 4.2.4, 4.3.4, 4.4.4, 4.5.2, 4.6.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++0x mode: 4.3.4, 4.4.4, 4.5.2
+              </div>
+            </li>
+            <li>
+              <div>
+                pgCC: 11.9
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 10.1, 11.1, 12.0
+              </div>
+            </li>
+            <li>
+              <div>
+                PathScale: 4.0.8
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual Age 10.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Clang from subversion
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel 11.1, 12.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.4
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++0x mode: 4.4.4
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                Visual C++ 8.0, 9.0, 10.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++ with STLport: 9.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++, Windows Mobile 5, with STLport: 9.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, mingw: 4.4.0, 4.5.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++0x mode, mingw: 4.5.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, mingw 64-bit: 4.4.7, 4.5.4, 4.6.1
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          AIX:
+          <ul>
+            <li>
+              <div>
+                IBM XL C/C++ Enterprise Edition, V11.1.0.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                GCC 4.2.1, 32 and 64 bit
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Solaris:
+          <ul>
+            <li>
+              <div>
+                Sun 5.10
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -648,7 +942,9 @@
   <div id="version_1_49_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Eric Niebler,
+      <a href="/users/people/rene_rivera.html">Rene Rivera</a>, Daniel James
+      and Vladimir Prus managed this release.
     </p>
   </div>
 </div>              </div>
