--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -168,7 +168,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Joel Falcou</td>
 
-                    <td>-</td>
+                    <td>February 20, 2012 - February 29, 2012</td>
                   </tr>
 
                   <tr>
