A little premature, but Predef is about to be ongoing.
[SVN r77069]

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -159,19 +159,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <td>Predef</td>
-
-                    <td>Rene Rivera</td>
-
-                    <td>
-		      <a href="http://tinyurl.com/73n6a3k">Source</a></td>
-
-                    <td>Joel Falcou</td>
-
-                    <td>February 20, 2012 - February 29, 2012</td>
-                  </tr>
-
-                  <tr>
                     <td>Metaparse</td>
 
                     <td>Abel Sinkovics</td>
@@ -205,6 +192,20 @@ http://www.boost.org/development/website_updating.html
                     <th>Result</th>
                   </tr>
                 </thead>
+
+                  <tr>
+                    <td>Predef</td>
+
+                    <td>Rene Rivera</td>
+
+                    <td>Joel Falcou</td>
+
+                    <td>February 20, 2012 - February 29, 2012</td>
+
+                    <td><a href=
+                    "http://lists.boost.org/boost-announce/2012/02/0349.php">
+			Ongoing</a></td>
+                  </tr>
 
                   <tr>
                     <td>Review Wizard Status Report</td>
