--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -61,7 +61,14 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="/libs/context/">Context</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Support for SPARC architecture added.
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
