--- a/users/history/version_1_54_0.html
+++ b/users/history/version_1_54_0.html
@@ -71,6 +71,23 @@
           </ul>
         </div>
       </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/coroutine/">Coroutine</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Support for segmented stacks (stack grows on demand) added.
+              </div>
+            </li>
+            <li>
+              <div>
+                fixes for #7805, #7899, #7972, #8023, #8024, #8101
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </div>
   <div id="version_1_54_0.compilers_tested">
